--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ button.submit:active { transform: scale(0.98); }
 <div class="card">
   <div class="card-content">
     <div class="header">
-      <img src="logo.png" alt="Logo" class="logo-img">
+      <img src="logo.jpg" alt="Logo" class="logo-img">
       
       <h1>ORDER FORM</h1>
     </div>
